Dark mode fix

--- a/css/main.css
+++ b/css/main.css
@@ -19,16 +19,18 @@ body.active {
 
 #theme-toggler {
     position: fixed;
-    top: 15px;
-    right: 25px;
-    padding: 15px 20px;
-    font-size: 20px;
+    top: 5px;
+    right: 15px;
+    padding: 10px 15px;
+    font-size: 15px;
     background: var(--secondary-bg-color);
     color: var(--primary-text-color);
     cursor: pointer;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: 5px;
-  }
+    z-index: 1021;
+}
+
 html {
     scroll-behavior: smooth;
     scroll-padding-top: 105px; /* height of sticky header */
@@ -86,7 +88,15 @@ ul.list-unstyled li a, a:hover, a:focus, a:active {
     z-index: 2;
     color: #fff;
     background-color: rgb(241, 179, 150);
-    border-color: rgb(241, 179, 150);
+    border-color: var(--primary-bg-color);
+}
+.list-group-item:active, .list-group-item:hover{
+    background-color: rgb(241, 179, 150);
+    color: var(--primary-text-color);
+}
+.list-group-item:focus{
+    background-color: var(--primary-bg-color);
+    color: var(--primary-text-color);
 }
 .aside {
     display: none;
@@ -125,6 +135,19 @@ ul.list-unstyled li a, a:hover, a:focus, a:active {
         margin-top: -15px;
         color: rgb(241, 179, 150);
     }
+    #theme-toggler {
+        position: fixed;
+        top: 5px;
+        right: 10px;
+        padding: 12px 18px;
+        font-size: 18px;
+        background: var(--secondary-bg-color);
+        color: var(--primary-text-color);
+        cursor: pointer;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        z-index: 1021;
+    }
 }
 @media  screen and (min-width:768px) {
     h2 {
@@ -147,12 +170,38 @@ ul.list-unstyled li a, a:hover, a:focus, a:active {
         margin-top: -15px;
         color: rgb(241, 179, 150);
     }
+    #theme-toggler {
+        position: fixed;
+        top: 5px;
+        right: 10px;
+        padding: 12px 18px;
+        font-size: 20px;
+        background: var(--secondary-bg-color);
+        color: var(--primary-text-color);
+        cursor: pointer;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        z-index: 1021;
+    }
 }
 @media  screen and (min-width:992px) {
     html {
         scroll-behavior: smooth;
         scroll-padding-top: 72px; /* height of sticky header */
         scroll-snap-type: y mandatory;
+    }
+    #theme-toggler {
+        position: fixed;
+        top: 5px;
+        right: 5px;
+        padding: 12px 18px;
+        font-size: 25px;
+        background: var(--secondary-bg-color);
+        color: var(--primary-text-color);
+        cursor: pointer;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        border-radius: 5px;
+        z-index: 1021;
     }
     h2 {
         position: static;
